<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground06"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signinTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:hint="@string/username"
        android:layout_below="@+id/signinTV"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/userNameET"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"/>

    <TextView
        android:id="@+id/forgetPassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordET"
        android:text="Forgot Passoword ?"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/login"
        android:drawableEnd="@drawable/login_icon"/>


    <TextView
        android:id="@+id/want_to_registerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="Not registered yet ?"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/registerNewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/register"
        android:drawableEnd="@drawable/next_icon"/>

</LinearLayout>
